--- a/_includes/nav_frontend.html
+++ b/_includes/nav_frontend.html
@@ -1,13 +1,13 @@
 <table>
     <tr>
-        <td><img src="{{site.baseurl}}//images/logo.png" height="60" title="Frontend" alt=""></td>
+        <td><img src="{{site.baseurl}}//images/.png" height="60" title="Frontend" alt=""></td>
         <td><a href="{{site.baseurl}}/frontend/overview">Overview</a></td>
         <td><a href="{{site.baseurl}}/frontend/javascript">Tutorial</a></td>
         <td><a href="{{site.baseurl}}/frontend/calculator">Calculator</a></td>
         <td><a href="{{site.baseurl}}/frontend/binary">Binary</a></td>
         <td><a href="{{site.baseurl}}/frontend/grades">Grades</a></td>
         <td><a href="{{site.baseurl}}/frontend/graph">Graph</a></td>
-        <td><a href="{{site.baseurl}}">Life</a></td>
+        <td><a href="{{site.baseurl}}/posts/2022/09/13/VideoNotes.html">Vocab</a></td>
         <td><a href="">Snake</a></td>
     </tr>
 </table>
