--- a/_includes/nav_frontend.html
+++ b/_includes/nav_frontend.html
@@ -1,13 +1,55 @@
-<table>
-    <tr>
-        <td><img src="{{site.baseurl}}//images/.png" height="60" title="Frontend" alt=""></td>
-        <td><a href="{{site.baseurl}}/frontend/overview">Overview</a></td>
-        <td><a href="{{site.baseurl}}/frontend/javascript">Tutorial</a></td>
-        <td><a href="{{site.baseurl}}/frontend/calculator">Calculator</a></td>
-        <td><a href="{{site.baseurl}}/frontend/binary">Binary</a></td>
-        <td><a href="{{site.baseurl}}/frontend/grades">Grades</a></td>
-        <td><a href="{{site.baseurl}}/frontend/graph">Graph</a></td>
-        <td><a href="{{site.baseurl}}/posts/2022/09/13/VideoNotes.html">Vocab</a></td>
-        <td><a href="">Snake</a></td>
-    </tr>
-</table>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Table Example</title>
+	<style>
+		table {
+			border-collapse: collapse;
+			margin: 10px 0;
+		}
+
+		td {
+			padding: 10px;
+			border: 1px solid #ccc;
+			text-align: center;
+			vertical-align: middle;
+			font-size: 16px;
+			font-family: sans-serif;
+		}
+
+		img {
+			margin-right: 10px;
+			vertical-align: middle;
+		}
+
+		a {
+			color: #fff;
+			background-color: #3498db;
+			display: inline-block;
+			padding: 10px 20px;
+			border-radius: 5px;
+			text-decoration: none;
+			transition: background-color 0.3s ease-in-out;
+		}
+
+		a:hover {
+			background-color: #2980b9;
+		}
+	</style>
+</head>
+<body>
+	<table>
+	    <tr>
+	        <td><img src="{{site.baseurl}}//images/.png" height="60" title="Frontend" alt=""></td>
+	        <td><a href="{{site.baseurl}}/frontend/overview">Overview</a></td>
+	        <td><a href="{{site.baseurl}}/frontend/javascript">Tutorial</a></td>
+	        <td><a href="{{site.baseurl}}/frontend/calculator">Calculator</a></td>
+	        <td><a href="{{site.baseurl}}/frontend/binary">Binary</a></td>
+	        <td><a href="{{site.baseurl}}/frontend/grades">Grades</a></td>
+	        <td><a href="{{site.baseurl}}/frontend/graph">Graph</a></td>
+	        <td><a href="{{site.baseurl}}/posts/2022/09/13/VideoNotes.html">Vocab</a></td>
+	        <td><a href="">Snake</a></td>
+	    </tr>
+	</table>
+</body>
+</html>
